--- a/index.html
+++ b/index.html
@@ -312,7 +312,18 @@
         };
 
         // Адрес твоего сервера (ЗАМЕНИ НА СВОЙ IP)
-        const API_URL = 'http://10.70.22.82:5000/api';
+        // Определяем, где мы находимся
+const isLocalFile = window.location.protocol === 'file:';
+const isLocalhost = window.location.hostname === 'localhost' || 
+                    window.location.hostname === '127.0.0.1';
+
+// Адрес твоего сервера (поменяй IP на свой!)
+const SERVER_IP = '10.70.22.82';  // ← ВСТАВЬ СВОЙ IP
+
+// Выбираем правильный протокол
+const API_URL = isLocalFile || isLocalhost 
+    ? `http://${SERVER_IP}:5000/api`           // для локального теста
+    : `https://cors-anywhere.herokuapp.com/http://${SERVER_IP}:5000/api`; // для GitHub Pages
 
         // Дождемся загрузки DOM
         document.addEventListener('DOMContentLoaded', function() {
@@ -457,4 +468,5 @@
     </script>
 </body>
 </html>
+
 
