--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         const SERVER_IP = '10.70.22.82';
         
         // Используем прокси для обхода блокировки HTTPS → HTTP
-        const API_URL = `https://corsproxy.io/?http://${SERVER_IP}:5000/api`;
+        const API_URL = `https://api.allorigins.win/raw?url=http://${SERVER_IP}:5000/api`;
 
         document.addEventListener('DOMContentLoaded', function() {
             // Табы
@@ -421,3 +421,4 @@
     </script>
 </body>
 </html>
+
