--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         const SERVER_IP = '10.70.22.82';
         
         // Используем прокси для обхода блокировки HTTPS → HTTP
-        const API_URL = `https://thingproxy.freeboard.io/fetch/http://${SERVER_IP}:5000/api`;
+        const API_URL = `https://api.codetabs.com/v1/proxy?quest=http://${SERVER_IP}:5000/api`;
 
 
         document.addEventListener('DOMContentLoaded', function() {
@@ -422,5 +422,6 @@
     </script>
 </body>
 </html>
+
 
 
