--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
         const SERVER_IP = '10.70.22.82';
         
         // Используем прокси для обхода блокировки HTTPS → HTTP
-        const API_URL = `http://10.70.22.82:5000/api`;
+        const API_URL = `https://corsproxy.io/?http://10.70.22.82:5000/api`;
+        // Добавь сразу после объявления API_URL
+        fetch(API_URL + '/user-orders?userId=' + user.id, { mode: 'no-cors' }).catch(() => {});
 
 
         document.addEventListener('DOMContentLoaded', function() {
@@ -422,6 +424,7 @@
     </script>
 </body>
 </html>
+
 
 
 
