--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         };
 
         // IP твоего сервера (тот же, что в PyCharm)
-        const API_URL = 'http://10.70.22.82:5000/api';
+        const API_URL = 'https://maxkom.pythonanywhere.com/api';
 
         function showTab(tabName) {
             document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
@@ -405,3 +405,4 @@
     </script>
 </body>
 </html>
+
