--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLOSERS | Магазин одежды</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
     <style>
         * {
             margin: 0;
@@ -393,6 +393,7 @@
 </script>
 </body>
 </html>
+
 
 
 
