--- a/index.html
+++ b/index.html
@@ -233,21 +233,27 @@
         <div id="catalog" class="tab-content active">
             <div class="catalog-grid">
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Nike Air Jordan 1">
+                    <img src="https://picsum.photos/200/200?random=1" 
+     onerror="this.onerror=null; this.src='https://source.unsplash.com/200x200/?jordan,nike'"
+     alt="Nike Air Jordan 1">
                     <h3>Nike Air Jordan 1 Retro High</h3>
                     <p class="price">от 15 990 ₽</p>
                     <p class="vendor">POIZON</p>
                     <button class="btn-order" onclick="quickOrder('Nike Air Jordan 1')">Быстрый заказ</button>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Essentials Hoodie">
+                   <img src="https://picsum.photos/200/200?random=2" 
+     onerror="this.onerror=null; this.src='https://source.unsplash.com/200x200/?hoodie,essentials'"
+     alt="Essentials Hoodie">
                     <h3>Essentials Fear of God Hoodie</h3>
                     <p class="price">от 8 490 ₽</p>
                     <p class="vendor">POIZON</p>
                     <button class="btn-order" onclick="quickOrder('Essentials Hoodie')">Быстрый заказ</button>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Stussy Zip Hoodie">
+                    <img src="https://picsum.photos/200/200?random=3" 
+     onerror="this.onerror=null; this.src='https://source.unsplash.com/200x200/?stussy,hoodie'"
+     alt="Stussy Zip Hoodie">
                     <h3>Stussy 8 Ball Zip Hoodie</h3>
                     <p class="price">от 11 990 ₽</p>
                     <p class="vendor">POIZON</p>
@@ -412,4 +418,5 @@ console.error = (function(old) {
     </script>
 </body>
 </html>
+
 
