--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         };
 
         const API_URL = 'https://maxkom.pythonanywhere.com/api';
-        const ADMIN_CONTACT = 'https://t.me/closersmanager'; // Замени на свой контакт
+        const ADMIN_CONTACT = 'https://t.me/closersmanager';
 
         // ========== КОРЗИНА ==========
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
@@ -620,4 +620,5 @@
     </script>
 </body>
 </html>
+
 
