--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         <!-- ХЕДЕР -->
         <header class="header">
             <h1>CLOSERS</h1>
-            <div class="subtitle">ПОИСК И ЗАКАЗ С POIZON</div>
+            <div class="subtitle">ОРИГИНАЛЬНЫЕ ВЕЩИ С POIZON</div>
         </header>
 
         <!-- УВЕДОМЛЕНИЕ О VPN -->
@@ -1422,3 +1422,4 @@
     </script>
 </body>
 </html>
+
