--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLOSERS | Поиск и заказ с POIZON</title>
+    <title>CLOSERS shop</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         * {
@@ -151,7 +151,7 @@
         /* ========== ПЛАВАЮЩАЯ КНОПКА (ТОЛЬКО СВОЙ ЗАПРОС) ========== */
         .floating-request-btn {
             position: fixed;
-            bottom: 80px;
+            bottom: 90px;
             right: 16px;
             z-index: 99;
             background-color: #ffffff;
@@ -846,7 +846,7 @@
         <!-- ХЕДЕР -->
         <header class="header">
             <h1>CLOSERS</h1>
-            <div class="subtitle">ПОИСК И ЗАКАЗ С POIZON</div>
+            <div class="subtitle">ОРИГИНАЛЬНЫЕ ВЕЩИ С POIZON</div>
         </header>
 
         <!-- УВЕДОМЛЕНИЕ О VPN -->
@@ -1513,3 +1513,4 @@
     </script>
 </body>
 </html>
+
