--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             margin-bottom: 26px;
             padding-bottom: 16px;
             border-bottom: 4px solid #333333;
+            padding-top: 6px;
         }
         
         .header h1 {
@@ -1632,5 +1633,6 @@
     </script>
 </body>
 </html>
+
 
 
